# rust-gpu-software-rasteriser

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
compute_shader/: Cargo.toml
compute_shader/src/: lib.rs
compute_shader_interface/: Cargo.toml  build.rs
compute_shader_interface/benches/: benchmark_rasteriser.rs
compute_shader_interface/examples/: generate_tiff.rs
compute_shader_interface/src/: gpu_runner.rs  host_dispatcher.rs  rasteriser.rs  wgpu_dispatcher.rs
