[package]
name = "compute_shader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]


[dependencies]
spirv-std = { path = "../../rust-gpu/crates/spirv-std", version = "=0.9.0", features = ["bytemuck"] }
zerocopy = { version = "0.8.8", features = ["derive"] }

[dev-dependencies]
approx = "0.5.1"
paste = "1.0.15"
