[package]
name = "compute_shader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]


[dependencies]
bytemuck = { version = "1.19.0", features = ["derive"] }
spirv-std = { path = "../../rust-gpu/crates/spirv-std", version = "=0.9.0" }

[dev-dependencies]
approx = "0.5.1"
paste = "1.0.15"
